--- a/chatben.html
+++ b/chatben.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <!-- <meta name="salesforce-community" content="Site URL">
+        <meta name="salesforce-community" content="Site URL">
         <meta name="salesforce-mode" content="popup-callback">
         <meta name="salesforce-save-access-token" content="true">
         <meta name="salesforce-allowed-domains" content="cumulusbank.com">
@@ -12,10 +12,10 @@
             .embeddedServiceHelpButton .helpButton .uiButton:focus {
                 outline: 1px solid #0596DE; 
             }
-        </style> -->
+        </style>
     </head>
     <body>Yop
-        <!-- <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+        <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
         <script type='text/javascript'>
             var initESW = function(gslbBaseURL) {
                 embedded_svc.settings.displayHelpButton = true;
@@ -62,6 +62,6 @@
             } else {
                 initESW('https://service.force.com');
             }
-        </script> -->
+        </script>
     </body>
 </html>
