--- a/chatben.html
+++ b/chatben.html
@@ -1,9 +1,4 @@
 <html>
-    <head>
-        <meta name="salesforce-community" content="Site URL">
-        <meta name="salesforce-mode" content="popup-callback">
-        <meta name="salesforce-save-access-token" content="true">
-        <meta name="salesforce-allowed-domains" content="cumulusbank.com">
         <style type='text/css'>
             .embeddedServiceHelpButton .helpButton .uiButton {
                 background-color: #0596DE;
@@ -13,8 +8,7 @@
                 outline: 1px solid #0596DE; 
             }
         </style>
-    </head>
-    <body>Yop
+    
         <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
         <script type='text/javascript'>
             var initESW = function(gslbBaseURL) {
@@ -63,5 +57,5 @@
                 initESW('https://service.force.com');
             }
         </script>
-    </body>
+        <body>Yop 2</body>
 </html>
