--- a/chatben.html
+++ b/chatben.html
@@ -19,13 +19,16 @@
                 embedded_svc.settings.enabledFeatures = ['LiveAgent'];
                 embedded_svc.settings.entryFeature = 'LiveAgent';
                 embedded_svc.settings.extraPrechatFormDetails = [{
-                "label":"First Name",  
+                "label":"First Name",
+                "value":"Claude",
                 "transcriptFields": ["FirstName__c"]
                 },{
                 "label":"Last Name", 
+                "value":"la bernique",
                 "transcriptFields": ["LastName__c"]
                 },{
                 "label":"DoctoId", 
+                "value":"33579613", 
                 "transcriptFields": ["DoctoId__c"]
                 }];
 
