--- a/chatben.html
+++ b/chatben.html
@@ -14,21 +14,24 @@
             var initESW = function(gslbBaseURL) {
                 embedded_svc.settings.displayHelpButton = true;
                 embedded_svc.settings.language = '';
+                
+                embedded_svc.settings.prepopulatedPrechatFields = {
+                    FirstName: "Claude",
+                    LastName: "la bernique",
+                    DoctoId__c: "33579613"
+                };
 
 
                 embedded_svc.settings.enabledFeatures = ['LiveAgent'];
                 embedded_svc.settings.entryFeature = 'LiveAgent';
                 embedded_svc.settings.extraPrechatFormDetails = [{
                 "label":"First Name",
-                "value":"Claude",
                 "transcriptFields": ["FirstName__c"]
                 },{
-                "label":"Last Name", 
-                "value":"la bernique",
+                "label":"Last Name",
                 "transcriptFields": ["LastName__c"]
                 },{
-                "label":"DoctoId", 
-                "value":"33579613", 
+                "label":"DoctoId",
                 "transcriptFields": ["DoctoId__c"]
                 }];
 
