--- a/chatben.html
+++ b/chatben.html
@@ -16,8 +16,8 @@
                 embedded_svc.settings.language = '';
                 
                 embedded_svc.settings.prepopulatedPrechatFields = {
-                    FirstName: "Claude",
-                    LastName: "la bernique",
+                    FirstName: "Jean",
+                    LastName: "MICHEL",
                     DoctoId__c: "33579613"
                 };
 
